--- a/src/main/resources/templates/common_header_navbar.html
+++ b/src/main/resources/templates/common_header_navbar.html
@@ -17,7 +17,7 @@
 					</a>
 						<ul class="header3-sub-list list-unstyled">
 							<li><a href="user.html">用户管理</a></li>
-							<li><a href="index2.html">企业管理</a></li>
+							<li><a href="company.html">企业管理</a></li>
 						</ul></li>
 				</ul>
 			</div>
